--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["なるみ"]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^5.0.4"
+yapf = "^0.32.0"
+pytest = "^7.2.0"
+codecov = "^2.1.12"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
