ci: refactor GitHub actions and update lint rules
- Remove `lint.yml` GitHub workflow
- Rename `Test` workflow to `Python` and merge lint step into it
- Update `lint` rule in `Makefile` to depend on `install` rule

Signed-off-by: なるみ <toucans-cutouts0f@icloud.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
-name: Test
+name: Python
 
 on:
   push:
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
@@ -14,19 +14,19 @@ jobs:
         poetry-version: [1.5.1]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Poetry
-        uses: abatilo/actions-poetry@v2
+      - uses: abatilo/actions-poetry@v2
         with:
           poetry-version: ${{ matrix.poetry-version }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: poetry
+
+      - name: Lint
+        run: make lint
 
       - name: Test
         env:
