ci: improve GitHub actions for better workflow efficiency
- Remove redundant step names in the publish.yml github action
- Limit the branches on which the test.yml github action is triggered
- Replace the "make lint" command with a "poetry run flake8" command
- Replace the "make cover" command with a "poetry run pytest" command

Signed-off-by: なるみ <toucans-cutouts0f@icloud.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,9 @@ name: Python
 
 on:
   push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
@@ -25,10 +28,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: poetry
 
-      - name: Lint
-        run: make lint
+      - name: Install dependencies
+        run: poetry install
 
-      - name: Test
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        run: make cover
+      - name: Lint with flake8
+        run: poetry run flake8 -v
+
+      - name: Test with pytest
+        run: poetry run pytest -v -s --disable-warnings
