--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ flake8 = "^6.0.0"
 yapf = "^0.33.0"
 toml = "^0.10.2"
 pytest = "^7.3.1"
-codecov = "^2.1.13"
+coverage = "^7.2.7"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
