feat: refactor project structure and add CLI functionality
- Rename project from "python-template" to "template"
- Add script entry point for "template" command
- Move __init__.py file from "python_template" to "template" directory
- Add new file "cli.py" with a "main" function that prints "Hello, World!"

Signed-off-by: なるみ <toucans-cutouts0f@icloud.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "python-template"
+name = "template"
 version = "0.1.0"
 description = ""
 authors = ["なるみ"]
@@ -18,3 +18,6 @@ isort = "^5.12.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+template = "template.cli:main"
