--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ authors = ["なるみ"]
 python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
-flake8 = "^6.0.0"
-yapf = "^0.33.0"
+flake8 = "^6.1.0"
 toml = "^0.10.2"
-pytest = "^7.3.1"
-coverage = "^7.2.7"
+pytest = "^7.4.2"
+coverage = "^7.3.1"
 isort = "^5.12.0"
+black = "^23.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
