--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "template"
 version = "0.1.0"
 description = ""
-authors = ["なるみ <toucans-cutouts0f@icloud.com>"]
+authors = ["narumi <toucans-cutouts0f@icloud.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
