--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,8 +13,8 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [3.9]
-        poetry-version: [1.6.1]
+        python-version: ["3.9"]
+        poetry-version: ["1.6.1"]
 
     steps:
       - uses: actions/checkout@v4
