--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,10 @@ python = "^3.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.1"
-coverage = "^7.3.1"
 flake8 = "^6.0.0"
 isort = "^5.12.0"
 pytest = "^7.4.2"
+pytest-cov = "^4.1.0"
 toml = "^0.10.2"
 
 [build-system]
