--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -12,7 +12,7 @@ jobs:
       max-parallel: 1
       matrix:
         python-version: ["3.9"]
-        poetry-version: ["1.7.0"]
+        poetry-version: ["1.7.1"]
     steps:
       - uses: actions/checkout@v4
       - uses: abatilo/actions-poetry@v2
@@ -24,7 +24,7 @@ jobs:
           cache: poetry
       - name: Publish
         env:
-          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+          POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
         run: |
           poetry build -f wheel
-          poetry publish -u __token__ -p $PYPI_TOKEN
+          poetry publish
