--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^7.4.2"
 pytest-cov = "^4.1.0"
 ruff = "^0.1.8"
 toml = "^0.10.2"
+mypy = "^1.8.0"
 
 [tool.poetry.scripts]
 template = "template.cli:main"
