--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ select = [
     "E", # pycodestyle errors
     "F", # pyflakes
     "I", # isort
-    # "UP", # pyupgrade
+    "N", # pep8-naming
+    "UP", # pyupgrade
     "W", # pycodestyle warnings
 
 ]
