--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
+          cache: poetry
       - name: Install
         run: |
           pipx install poetry==${{ matrix.poetry-version }}
