--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Lint
-        run: poetry run ruff check .
-      - name: Test
-        run: poetry run pytest -v -s --cov=. --cov-report=xml tests
+        run: make lint
       - name: Mypy
-        run: poetry run mypy .
+        run: make type
+      - name: Test
+        run: make cover
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
