--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,14 +12,14 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: ["3.11"]
-        poetry-version: ["1.8.3"]
+        python-version: ["3.10"]
+        poetry-version: ["1.8.2"]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
+          cache: poetry
       - name: Install poetry
         run: pipx install poetry==${{ matrix.poetry-version }}
       - name: Publish
