--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -18,7 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install poetry
-        run: pipx install poetry==${{ matrix.poetry-version }}
+        run: |
+          pipx install poetry==${{ matrix.poetry-version }}
+          poetry config virtualenvs.create true --local
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
