--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,14 +19,16 @@ jobs:
         poetry-version: ["1.8.3"]
     steps:
       - uses: actions/checkout@v4
-      - name: Install poetry
-        run: pipx install poetry==${{ matrix.poetry-version }}
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: poetry
+      - name: Install poetry
+        run: |
+          pip install pipx
+          pipx install poetry==${{ matrix.poetry-version }}
+          poetry env info
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --sync
       - name: Lint
         run: make lint
       - name: Type check
