--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,11 +21,9 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install poetry
-        run: |
-          pip install pipx
-          pipx install poetry==${{ matrix.poetry-version }}
-          poetry env info
+      - uses: narumiruna/setup-poetry@v1
+        with:
+          poetry-version: ${{ matrix.poetry-version }}
       - name: Install dependencies
         run: poetry install --sync
       - name: Lint
