--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,3 +46,6 @@ force-single-line = true
 
 [tool.pytest.ini_options]
 filterwarnings = ["ignore::DeprecationWarning"]
+
+[tool.mypy]
+ignore_missing_imports = true
