--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,27 @@
-[tool.poetry]
-name = "template"
+[project]
+name = "python-template"
 version = "0.1.0"
-description = ""
-authors = ["narumi <toucans-cutouts0f@icloud.com>"]
+description = "Add your description here"
+readme = "README.md"
+authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
+requires-python = ">=3.13"
+dependencies = []
 
-[tool.poetry.dependencies]
-python = "^3.11"
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.3"
-pytest-cov = "^5.0.0"
-ruff = "^0.7.0"
-toml = "^0.10.2"
-mypy = "^1.13.0"
-
-[tool.poetry.scripts]
-template = "template.cli:main"
+[project.scripts]
+python-template = "python_template.cli:main"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv]
+dev-dependencies = [
+    "mypy>=1.13.0",
+    "pytest>=8.3.3",
+    "pytest-cov>=5.0.0",
+    "ruff>=0.7.0",
+    "toml>=0.10.2",
+]
 
 [tool.ruff]
 exclude = ["build"]
