--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,12 @@ python-template = "python_template.cli:main"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "mypy>=1.13.0",
     "pytest>=8.3.3",
-    "pytest-cov>=5.0.0",
-    "ruff>=0.7.0",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.7.3",
 ]
 
 [tool.ruff]
