--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -27,7 +27,9 @@ jobs:
           BUMPVERSION_TAG: "true"
         with:
           args: ${{ inputs.bump-type }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Create a personal access token https://github.com/settings/tokens
+          # Add your role to bypass list in the branch protection settings
+          github-token: ${{ secrets.GITHUB_PAT_TOKEN }}
       - name: Check
         if: steps.bump.outputs.bumped == 'true'
         run: |
