--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -29,7 +29,7 @@ jobs:
           args: ${{ inputs.bump-type }}
           # Create a personal access token https://github.com/settings/tokens
           # Add your role to bypass list in the branch protection settings
-          github-token: ${{ secrets.GITHUB_PAT_TOKEN }}
+          github-token: ${{ secrets.GH_TOKEN }}
       - name: Check
         if: steps.bump.outputs.bumped == 'true'
         run: |
