✨ feat(logging): enhance logging configuration with RichHandler

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = ""
 readme = "README.md"
 authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
 requires-python = ">=3.12"
-dependencies = ["loguru>=0.7.3"]
+dependencies = [
+    "loguru>=0.7.3",
+    "rich>=14.0.0",
+]
 
 [project.scripts]
 pythontemplate = "pythontemplate.cli:main"
