--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -13,6 +13,10 @@ on:
           - minor
           - patch
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   bump-version:
     runs-on: ubuntu-latest
@@ -29,7 +33,10 @@ jobs:
           args: ${{ inputs.bump-type }}
           # Create a personal access token https://github.com/settings/tokens
           # Add your role to bypass list in the branch protection settings
-          github-token: ${{ secrets.GH_TOKEN }}
+          # github-token: ${{ secrets.GH_TOKEN }}
+          # Settings -> Actions -> General -> Workflow permissions
+          # Allow GitHub Actions to create and approve pull requests
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Check
         if: steps.bump.outputs.bumped == 'true'
         run: |
