--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -5,8 +5,7 @@ on:
 
 permissions:
   contents: write
-  # Settings -> Actions -> General
-  # Allow GitHub Actions to create and approve pull requests
+  issues: write
   pull-requests: write
 
 jobs:
