--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,13 +19,13 @@ jobs:
       - uses: actions/checkout@v5
       - uses: astral-sh/setup-uv@v7
         with:
-          python-version:  ${{ matrix.python-version }}
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: uv sync
       - name: Lint
         run: uv run ruff check .
       - name: Type check
-        run: uv run mypy --install-types --non-interactive .
+        run: uv run ty check .
       - name: Test
         run: uv run pytest -v -s --cov=src --cov-report=xml tests
       - name: Upload coverage reports to Codecov
