--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ dependencies = ["loguru>=0.7.3", "typer>=0.20.0"]
 pythontemplate = "pythontemplate.cli:app"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
 
 [dependency-groups]
 dev = ["pytest-cov>=6.0.0", "pytest>=8.3.3", "ruff>=0.7.3", "ty>=0.0.1a26"]
