--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,6 @@ repos:
     hooks:
       - id: ty-check
         name: ty-check
-        entry: uv run ty check .
+        entry: uv run ty check src tests
         language: system
         pass_filenames: false
