--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,12 @@ requires = ["uv_build>=0.8.17,<0.9.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["pytest-cov>=6.0.0", "pytest>=8.3.3", "ruff>=0.7.3", "ty>=0.0.1a26"]
+dev = [
+    "pytest-cov>=6.0.0",
+    "pytest>=8.3.3",
+    "ruff>=0.7.3",
+    "ty>=0.0.8",
+]
 
 [tool.ruff]
 exclude = ["build"]
