--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ select = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401", "F403"]
+"tests/**.py" = ["ANN", "TRY", "PERF"]
 
 [tool.ruff.lint.isort]
 force-single-line = true
