--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,8 @@ repos:
     rev: v0.0.1
     hooks:
       - id: ty-check
+  - repo: https://github.com/tombi-toml/tombi-pre-commit
+    rev: v0.7.22
+    hooks:
+      - id: tombi-format
+
