--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,49 +1,58 @@
 [project]
-name = "pythontemplate"
-version = "0.0.0"
-description = ""
-readme = "README.md"
+name            = "pythontemplate"
+version         = "0.0.0"
+description     = ""
+readme          = "README.md"
 requires-python = ">=3.12"
-authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
-dependencies = ["loguru>=0.7.3", "typer>=0.20.0"]
+authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
+dependencies    = ["loguru>=0.7.3", "typer>=0.20.0"]
 
 [project.scripts]
 pythontemplate = "pythontemplate.cli:app"
 
-[build-system]
-requires = ["uv_build>=0.8.17,<0.9.0"]
-build-backend = "uv_build"
-
 [dependency-groups]
 dev = ["pytest>=8.3.3", "pytest-cov>=6.0.0", "ruff>=0.7.3", "ty>=0.0.8"]
+
+[build-system]
+requires      = ["uv_build>=0.8.17,<0.9.0"]
+build-backend = "uv_build"
+
+[tool.bumpversion]
+current_version  = "0.0.0"
+tag              = true
+commit           = true
+pre_commit_hooks = ["uv lock", "git add uv.lock"]
+
+[tool.pytest]
+filterwarnings = ["ignore::DeprecationWarning"]
 
 [tool.ruff]
 line-length = 120
 
 [tool.ruff.lint]
 select = [
-  "ANN",  # flake8-annotations
+  "ANN",    # flake8-annotations
   "ASYNC",  # flake8-async
-  "B",  # flake8-bugbear
-  "BLE",  # flake8-blind-except
-  "C",  # flake8-comprehensions
-  "DTZ",  # flake8-datetimez
-  "E",  # pycodestyle errors
-  "F",  # pyflakes
-  "FURB",  # refurb
-  "I",  # isort
-  "N",  # pep8-naming
-  "PERF",  # perflint
-  "PIE",  # flake8-pie
-  "PTH",  # flake8-use-pathlib
-  "RET",  # flake8-return
-  "RSE",  # flake8-raise
-  "RUF",  # ruff-specific rules
-  "SIM",  # flake8-simplify
-  "TID",  # flake8-tidy-imports
-  "TRY",  # tryceratops
-  "UP",  # pyupgrade
-  "W",  # pycodestyle warnings
+  "B",      # flake8-bugbear
+  "BLE",    # flake8-blind-except
+  "C",      # flake8-comprehensions
+  "DTZ",    # flake8-datetimez
+  "E",      # pycodestyle errors
+  "F",      # pyflakes
+  "FURB",   # refurb
+  "I",      # isort
+  "N",      # pep8-naming
+  "PERF",   # perflint
+  "PIE",    # flake8-pie
+  "PTH",    # flake8-use-pathlib
+  "RET",    # flake8-return
+  "RSE",    # flake8-raise
+  "RUF",    # ruff-specific rules
+  "SIM",    # flake8-simplify
+  "TID",    # flake8-tidy-imports
+  "TRY",    # tryceratops
+  "UP",     # pyupgrade
+  "W",      # pycodestyle warnings
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -52,14 +61,9 @@ select = [
 [tool.ruff.lint.isort]
 force-single-line = true
 
+[tool.tombi.format.rules]
+key-value-equals-sign-alignment = true
+trailing-comment-alignment      = true
+
 [tool.ty.rules]
 unresolved-import = "ignore"
-
-[tool.pytest.ini_options]
-filterwarnings = ["ignore::DeprecationWarning"]
-
-[tool.bumpversion]
-current_version = "0.0.0"
-tag = true
-commit = true
-pre_commit_hooks = ["uv lock", "git add uv.lock"]
