--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: GitHub Container Registry
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
       - "v*.*.*"
 
 jobs:
-  docker:
+  ghcr:
     runs-on: ubuntu-latest
     steps:
       # https://docs.docker.com/build/ci/github-actions/manage-tags-labels/
@@ -16,7 +16,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}
+            ghcr.io/${{ github.repository }}
           flavor: |
             latest=auto
           tags: |
@@ -31,11 +31,12 @@ jobs:
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to Docker Hub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PAT_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
